# phasmophobia_collaborative_journal

./: .dockerignore  .gitignore  Dockerfile  README.md  justfile  main.py  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: app.py  store.py  websocket.py
sass/: site.scss
src/: App.tsx  Auth.tsx  EvidenceControls.tsx  Home.tsx  Navbar.tsx  Profile.tsx  Room.tsx  Rooms.tsx  db.ts  gameData.ts  index.scss  index.tsx  store.ts
src/db/: functions.ts  index.ts  models.ts  tables.ts
static/: gameData.mjs  roomControls.mjs  setUsername.js
systemd/: phasmo_collab_journal.service  redis_image.service  start_journal.sh
templates/: base.html  home.html  room.html  rooms.html
