[tool.poetry]
name = "phasmo_collab_journal"
version = "0.1.0"
description = ""
authors = ["Celeo <mattboulanger@fastmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.68.1"}
aiofiles = "0.5"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
